added missing section ids

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -159,7 +159,7 @@ flag. These kernel patches come with livepatching tools. After installation you 
 which contain a higher kernel version than the one you have installed on your systems.
 ====
 
-
+[#exclude-higher-kernel-version]
 === Exclude Packages with a Higher Kernel Version
 
 In this example you will update your systems with patch *SUSE-15-2019-1244* which contains *kernel-default-4.12.14-150.17.1-x86_64*.
@@ -196,15 +196,17 @@ NOTE: All kernel patches with higher kernel versions are removed. Live patching 
 will stay available as long as they are not the first in a series.
 
 
-
+[#update-project-for-next-patch-month]
 == Update the Project for Next Patch Month
 
+// WIP Joseph
 To update the project to the next patch month you operate similar to the case before.
 Important is, that you do not change the "Exclude kernel greater than 4.12.14-150.17.1: ..."
 Filter. With it you keep normal kernel-updates away, but take the latest live patches
 up to the selected month.
 
 
+[#switch-kernel-version-for-live-patching]
 == Switch to a New Kernel Version for Live Patching
 
 Live Patching for a specific kernel version is only available for one year. After one year
