cobbler option fix

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -257,7 +257,7 @@ For information about creating and configuring Kickstart and {ay} profiles in th
 Use the [command]``cobbler`` command as root to create profiles from the command line:
 
 ----
-cobbler profile add --name=string --distro=string [--kickstart=url] \
+cobbler profile add --name=string --distro=string [--autoinstall=url] \
   [--virt-file-size=gigabytes] [--virt-ram=megabytes]
 ----
 
@@ -268,7 +268,7 @@ A unique label for the profile, such as `sles12webserver` or ``sles12workstation
 The distribution that will be used for this profile.
 For adding distributions, see pass:c[xref:FILENAME.adoc#advanced.topics.cobbler.adddistro[]].
 
-[option]``--kickstart=``[replaceable]``url``::
+[option]``--autoinstall=``[replaceable]``url``::
 The location of the Kickstart file (if available).
 
 [option]``--virt-file-size=``[replaceable]``gigabytes``::
