--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -14,7 +14,7 @@ Before you begin, ensure you have:
 Your key and certificate files must be in PEM format.
 
 The host name of the SSL keys and certificates must match the fully qualified host name of the machine you deploy them on.
-You can configure the host name of the certificate by editing the ``X509v3 Subject Alternative Name`` section of the certificate itself.
+You can set the host names in the ``X509v3 Subject Alternative Name`` section of the certificate.
 You can also list multiple host names if your environment requires it.
 
 If you want to use intermediate certificates, you need to merge the intermediate and root CA certificates into one file.
