--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -168,7 +168,7 @@ rhn-ssl-tool --gen-ca --rpm-only --dir="/root/combined-ssl-build"
 --target-dir /srv/www/htdocs/pub/ --trust-dir=/etc/pki/trust/anchors/
 ----
 
-When you have the combined RPMs, you can deploy the combined certificates to your clients.
+When you have the combined RPMs, you can deploy the combined CA certificates to your clients.
 
 
 .Procedure: Deploying Combined Certificates on Traditional Clients
