--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -231,7 +231,7 @@ rpm -Uhv ssl-build/susemanager-proxy/rhn-org-httpd-ssl-key-pair-susemanager-prox
 . Restart services to pick up the changes:
 +
 ----
-spacewalk-service restart
+rhn-proxy restart
 ----
 . Test that all clients still operate as expected and can use SSL to reach the {productname} Server and any proxies.
 
