--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -10,6 +10,8 @@ Organizing channels in this way ensures that only compatible packages are instal
 While {productname} provides all required channels, you might find it useful to create custom channels specific to your environment.
 {productname} Administrators and Channel Administrators have channel management authority, which gives them the ability to create and manage their own custom channels.
 
+For more on creating custom channels, see xref:administration:custom-channels.adoc[].
+
 [NOTE]
 ====
 When you subscribe to a vendor channel with a traditional client, the product package will automatically be installed.
