--- a/modules/client-configuration/pages/channels.adoc
+++ b/modules/client-configuration/pages/channels.adoc
@@ -27,4 +27,4 @@ You can modify or create new channels by navigating to menu:Software[Manage Soft
 If you require packages that are not provided by the standard {productname} base channels, you can create custom channels.
 {productname} Administrators and Channel Administrators have channel management authority, which gives them the ability to create and manage their own custom channels.
 
-For more on creating custom channels, see xref:administration:channel-management.adoc[].
+For more on creating custom channels, see xref:administration:custom-channels.adoc[].
