--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -2,7 +2,7 @@
 = Content Lifecycle Management Examples
 
 
-This section contains some common examples of content lifecycles.
+This section contains some common examples of how you can use content lifecycle management.
 Use these examples to build your own personalised implementation.
 
 [#create-proj-for-patch-cycle]
