--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -15,7 +15,7 @@ In this procedure you will create a filter that excludes all patches released af
 This filter is useful for your CLM projects that follow a monthly patch cycle.
 
 
-.Procedure: Create the "By Date" Filter
+.Procedure: Creating the ``By Date`` Filter
 . Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
 
 . Enter a **Filter Name** such as __Exclude patches by date__ and from the **Filter Type** dropdown menu select **Patch (issued after)**.
