--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -26,7 +26,7 @@ Your filter is saved and may be used for all new Projects.
 
 
 [#add-filter-to-proj]
-=== Add a Filter to a Project
+=== Add the Filter to the Project
 
 .Procedure: Add a Filter to a Project
 . Go to menu:Main Menu[Content Lifecycle > Projects] and select a Project from the list.
@@ -38,7 +38,7 @@ are listed.
 
 
 [#apply-filter-to-env]
-=== Apply the Filter to an Environment
+=== Apply the Filter to the Environment
 
 The Filter is now added to your filter list, but has not been applied to the project.
 To apply the filter you need to build the first environment.
@@ -60,7 +60,7 @@ Promotion creates a 1:1 copy of the metadata contained in the current environmen
 ====
 
 [#exclude-a-patch]
-=== Exclude a Patch
+=== Exclude a Patch from the Project
 
 Initial tests can help you discover issues.
 When such issues are found you must exclude the problem patch which was released before __August 1st, 2019 00:00am__.
@@ -82,7 +82,7 @@ Rebuilding a previous environment with the btn:[Build] button includes the new e
 
 
 [#include-a-patch]
-=== Include a Patch
+=== Include a Patch in the Project
 
 .Scenario: Include a Patch
 You receive a call from your Security Team.
