--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -11,7 +11,7 @@ Use these examples to build your own personalised implementation.
 [#create-a-filter]
 === Create a Filter for the Project
 
-In this procedure you will create a filter that excludes all patches released after a specified date.
+The ``By Date`` filter excludes all patches released after a specified date.
 This filter is useful for your CLM projects that follow a monthly patch cycle.
 
 
