--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -218,7 +218,7 @@ should be executed:
 . Create a new kernel version Filter.
 . Detach the previous filter **Exclude kernel greater than 4.12.14-150.17.1** and attach the new filter.
 
-Rebuild the environment by clicking the btn:[Build] button. The new
+Click btn:[Build] to rebuild the environment.
 environment will contain all kernel patches up to the new kernel version you have selected.
 Systems using these channels will see the kernel update and you may install it.
 This process requires a reboot, but the new kernel is good for one year.
