--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -219,7 +219,7 @@ should be executed:
 . Detach the previous filter **Exclude kernel greater than 4.12.14-150.17.1** and attach the new filter.
 
 Click btn:[Build] to rebuild the environment.
-environment will contain all kernel patches up to the new kernel version you have selected.
+The new environment contains all kernel patches up to the new kernel version you selected.
 Systems using these channels will see the kernel update and you may install it.
 This process requires a reboot, but the new kernel is good for one year.
 All packages installed during this time frame will match the current live patching kernel filter.
