--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -220,6 +220,6 @@ should be executed:
 
 Click btn:[Build] to rebuild the environment.
 The new environment contains all kernel patches up to the new kernel version you selected.
-Systems using these channels will see the kernel update and you may install it.
+Systems using these channels will have the kernel update available for installation.
 This process requires a reboot, but the new kernel is good for one year.
 All packages installed during this time frame will match the current live patching kernel filter.
