--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -221,5 +221,6 @@ should be executed:
 Click btn:[Build] to rebuild the environment.
 The new environment contains all kernel patches up to the new kernel version you selected.
 Systems using these channels will have the kernel update available for installation.
-This process requires a reboot, but the new kernel is good for one year.
+You will need to reboot systems after they have performed the upgrade.
+The new kernel will remain valid for one year.
 All packages installed during this time frame will match the current live patching kernel filter.
