--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -223,4 +223,4 @@ The new environment contains all kernel patches up to the new kernel version you
 Systems using these channels will have the kernel update available for installation.
 You will need to reboot systems after they have performed the upgrade.
 The new kernel will remain valid for one year.
-All packages installed during this time frame will match the current live patching kernel filter.
+All packages installed during the year will match the current live patching kernel filter.
