--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -16,7 +16,7 @@ This filter is useful for your CLM projects that follow a monthly patch cycle.
 
 
 .Procedure: Creating the ``By Date`` Filter
-. Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
 . Enter a **Filter Name** such as __Exclude patches by date__ and from the **Filter Type** dropdown menu select **Patch (issued after)**.
 
