--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -18,7 +18,9 @@ This filter is useful for your CLM projects that follow a monthly patch cycle.
 .Procedure: Creating the ``By Date`` Filter
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
-. Enter a **Filter Name** such as __Exclude patches by date__ and from the **Filter Type** dropdown menu select **Patch (issued after)**.
+. In the [guimenu]``Filter Name`` field, type a name for your filter.
+For example, [systemitem]``Exclude patches by date``.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (issued after)``.
 
 . Select the date and time, in this case: __August 1st, 2019 00:00am__ and click on btn:[Save].
 
