--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -22,7 +22,8 @@ This filter is useful for your CLM projects that follow a monthly patch cycle.
 For example, [systemitem]``Exclude patches by date``.
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (issued after)``.
 
-. Select the date and time, in this case: __August 1st, 2019 00:00am__ and click on btn:[Save].
+. Select the date and time.
+. Click btn:[Save].
 
 Your filter is saved and may be used for all new Projects.
 
