--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -30,7 +30,7 @@ For example, [systemitem]``Exclude patches by date``.
 [#add-filter-to-proj]
 === Add the Filter to the Project
 
-.Procedure: Add a Filter to a Project
+.Procedure: Adding a Filter to a Project
 . Go to menu:Main Menu[Content Lifecycle > Projects] and select a Project from the list.
 
 . Click on btn:[Attach/Detach Filters] link. In the modal popup all available Filters
