--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -31,7 +31,7 @@ For example, [systemitem]``Exclude patches by date``.
 === Add the Filter to the Project
 
 .Procedure: Adding a Filter to a Project
-. Go to menu:Main Menu[Content Lifecycle > Projects] and select a Project from the list.
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects] and select a project from the list.
 
 . Click on btn:[Attach/Detach Filters] link. In the modal popup all available Filters
 are listed.
