--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -33,7 +33,7 @@ For example, [systemitem]``Exclude patches by date``.
 .Procedure: Adding a Filter to a Project
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects] and select a project from the list.
 
-. Click on btn:[Attach/Detach Filters] link. In the modal popup all available Filters
+. Click btn:[Attach/Detach Filters] link to see all available filters
 are listed.
 
 . Select the new **Exclude patches by date** filter then click on btn:[Save].
